<resources>
    <string name="app_name">BGM</string>
    <string name="read_blog_posts">Read Blog Posts</string>
    <string name="onboard_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum iaculis nunc a sagittis.</string>
    <string name="skip">Skip</string>
    <string name="watch_live_streams">Watch Live Streams</string>
    <string name="enter_challenges">Enter Challenges</string>
    <string name="access_code">Access Code</string>
    <string name="enter_the_access_code_provided_by_your_company_below">Enter the access code provided by \nyour company below</string>
    <string name="i_agree_to_the_terms_of_use_and_privacy_policy">I agree to the Terms of Use and \nPrivacy Policy</string>
    <string name="proceed">Continue</string>
    <string name="incorrect_access_code">Incorrect Access Code</string>
    <string name="draxlmaier_munich_marketing_department"><b>Draxlmaier Munich</b> \nMarketing Department</string>
    <string name="home">Home</string>
    <string name="meet">Meet</string>
    <string name="challenges">Challenges</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="account_activated">Account Activated</string>
    <string name="all_articles">All Articles</string>
    <string name="search">Search</string>
    <string name="total_like"><b>%1$d</b> Likes</string>
    <string name="live_broadcast">Live Broadcast</string>
    <string name="total_viewers">135 Viewers</string>
    <string name="webinar">Webinar</string>
    <string name="rehazentrum_straubing_dr_hierl">Rehazentrum Straubing Dr Hierl</string>
    <string name="Proteishakes_without_protein_powder">Protein Shakes Without Protein Powder</string>
    <string name="marc_johnson">Marc Johnson</string>
    <string name="october_12">October 12</string>
    <string name="video">Video</string>
    <string name="timing">04:25</string>
    <string name="desc_text">The NASA scientists behind the James Webb Space Telescope have spent the better part of the past 26 years pleading for three things: patience, time and, in no small measure, money.</string>
    <string name="all_media">All Media</string>
    <string name="date_time">Mon, 18 July 18:00</string>
    <string name="view_recording">View Recording</string>
    <string name="all_favorites">All Favorites</string>
    <string name="food">Food</string>
    <string name="personal">Personal</string>
    <string name="work_stuff">Work Stuff</string>
    <string name="content_favorite">When I am too hot at work I like to open a window, retrieve an ice lolly from the kitchen and kick off my shoes. But for many people, this is not an option. Finding the right temperature can make a big difference to how happy – and productive – we are at work. It can also be the cause of some serious arguments. \n\nThe idea of a perfect temperature though is something of a red herring. Research into workplace psychology shows that, ultimately, people just want to have a level of control over their environment.</string>
    <string name="ivan_johnson_bruce_wayne_lark_kent">Ivan Johnson \nBruce Wayne \nlark Kent</string>
    <string name="speakers">Speakers</string>
    <string name="save_to_favorites">Save To Favorites</string>
    <string name="are_you_sure_you_want_to_remove_it_from_favorites">Are you sure you want to remove it from favorites?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_delete_the_collection">Are you sure you want to delete the collection?</string>
    <string name="edit_collection">Edit Collection</string>
    <string name="the_cover_is_the_latest_post_in_the_list">The cover is the latest post in the list</string>
    <string name="name">Name</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_to">Save To</string>
    <string name="new_collection">New Collection</string>
    <string name="save">Save</string>
    <string name="challenge">Challenge</string>
    <string name="total_participants">135 Participants</string>
    <string name="accept_invitation">Accept Invitation</string>
    <string name="decline_invitation">Decline Invitation</string>
    <string name="dynamic_days_and_time">16 days 8 hours</string>
    <string name="dr_xlmaier_tiktok_challenge">DRÄXLMAIER TikTok Challenge</string>
    <string name="dr_xlmaier_trivia_games">DRÄXLMAIER Trivia Games</string>
    <string name="dynamic_days">16 days left</string>
    <string name="dynamic_days_second">18 days left</string>
    <string name="dynamic_days_third">19 days left</string>
    <string name="draxlmaier_sales_poker">DRÄXLMAIER Sales poker</string>
    <string name="chilled_out">Chill out. A slightly warmer office</string>
    <string name="new_challenges">New Challenges</string>
    <string name="contact">Contact</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="reset_app">Reset App</string>
    <string name="invites">Invites</string>
    <string name="progress_indicator_dynamic_text">77 of 100 Videos</string>
    <string name="invite_department">Invite Department</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="insert_video_link">Insert Video Link</string>
    <string name="submit">Submit</string>
    <string name="participants">Participants (%1$d)</string>
    <string name="description">Description</string>
    <string name="description_open_challenges">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar orci ligula, in pulvinar risus tempus nec. Integer elit est, fermentum sagittis lacinia sodales, facilisis placerat nibh. Sed interdum leo sollicitudin elit elementum convallis.</string>
    <string name="_77_of_100_videos_uploaded">77 of 100 VIDEOS UPLOADED</string>
    <string name="are_you_sure_you_want_to_decline_the_invitation">Are you sure you want \nto decline the invitation?</string>
    <string name="dr_xlmaier_schrittchallenge">DRÄXLMAIER Step Challenge</string>
    <string name="article_video_description">When I am too hot at work I like to open a window, retrieve an ice lolly from the kitchen and kick off my shoes.</string>
    <string name="amanda_parker">Amanda Parker</string>
    <string name="participants_text">Participants</string>
    <string name="marketing_department">Marketing Department</string>
    <string name="dynamic_participant_one">15 Participants</string>
    <string name="dynamic_participant_two">8 Participants</string>
    <string name="dynamic_participant_third">18 Participants</string>
    <string name="business_developement">Business Development</string>
    <string name="it_department">IT Department</string>
    <string name="dynamic_date">16</string>
    <string name="dynamic_hours">08</string>
    <string name="dynamic_minutes">42</string>
    <string name="dynamic_second">31</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="darrell_steward" translatable="false">Darrell Steward</string>
    <string name="jacob_jones" translatable="false">Jacob Jones</string>
    <string name="theresa_webb" translatable="false">Theresa Webb</string>
    <string name="savannah_nguyen" translatable="false">Savannah Nguyen</string>
    <string name="leslie_alexander" translatable="false">Leslie Alexander</string>
    <string name="the_invitation_was_sent_successfully">The Invitation was sent\n successfully!</string>
    <string name="mail_id" translatable="false">Kontakt@bgm-by.drhierl.de</string>
    <string name="phone_number" translatable="false">+49 9421/568380</string>
    <string name="contact_url" translatable="false">www.bgm-by.drhierl.de</string>
    <string name="contact_support"><![CDATA[Contact & Support]]></string>
    <string name="contact_form">Contact Form</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="term_condition_desc">These terms and conditions outline the rules and regulations for the use of DRÄXLMAIER\'s Website, located at www.DRÄXLMAIER.com.\n\nBy accessing this website we assume you accept these terms and conditions. Do not continue to use DRÄXLMAIER.com if you do not agree to take all of the terms and conditions stated on this page. \n\nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</string>
    <string name="select_department">Select Department</string>
    <string name="data_privacy_content">This document informs Users about the technologies that help this Website to achieve the purposes described below. Such technologies allow the Owner to access and store information (for example by using a Cookie) or use resources (for example by running a script) on a User’s device as they interact with this Website.\n\n For simplicity, all such technologies are defined as "Trackers" within this document – unless there is a reason to differentiate.\nFor example, while Cookies can be used on both web and mobile browsers, it would be inaccurate to talk about Cookies in the context of mobile apps as they are a browser-based Tracker. For this reason, within this document, the term Cookies is only used where it is specifically meant to indicate that particular type of Tracker. \n\nSome of the purposes for which Trackers are used may also require the User\'s consent. Whenever consent is given, it can be freely withdrawn at any time following the instructions provided in this document.</string>
    <string name="ulman_potter" translatable="false">Ulman Potter</string>
    <string name="richard_johnson" translatable="false">Richard Johnson</string>
    <string name="send_invite">Send Invite</string>
    <string name="number_of_participants" translatable="false">51232</string>
    <string name="total_number_of_participants" translatable="false">52319</string>
    <string name="no_search_results">No Search Results</string>
    <string name="bookmark_content">All your data and bookmarks will be removed and you will start with a blank app again</string>
    <string name="are_you_sure_you_want_to_reset_the_app">Are you sure you want to reset the app?</string>
    <string name="video_description">When I am too hot at work I like to open a window, retrieve an ice lolly from the kitchen and kick off my shoes. But for many people, this is not an option. Finding the right temperature can make a big difference to how happy – and productive – we are at work. It can also be the cause of some serious arguments. \n\nThe idea of a perfect temperature though is something of a red herring. Research into workplace psychology shows that, ultimately, people just want to have a level of control over their environment.</string>
</resources>