<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_home"
        android:enabled="true"
        android:title="@string/home"/>

    <item android:id="@+id/navigation_mediathek"
        android:icon="@drawable/bottom_mediathek"
        android:enabled="true"
        android:title="@string/meet"/>

    <item android:id="@+id/navigation_challenges"
        android:icon="@drawable/bottom_challenges"
        android:enabled="true"
        android:title="@string/challenges"/>

    <item android:id="@+id/navigation_favorites"
        android:icon="@drawable/bottom_favorite"
        android:enabled="true"
        android:title="@string/favorites"/>

    <item android:id="@+id/navigation_setting"
        android:icon="@drawable/bottom_setting"
        android:enabled="true"
        android:title="@string/settings"/>
</menu>