<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="FragmentEditBinding">

        <variable
            name="clickListener"
            type="com.applaunch.bgm.views.fragment.favorite.EditCollectionFragment" />

        <variable
            name="isValid"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        tools:context=".old.ui.challenges.ChallengeInviteSelectedFragment">

        <ImageView
            android:id="@+id/ivEditBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_60dp"
            android:padding="@dimen/margin_4dp"
            android:onClick="@{clickListener :: backClick}"
            android:src="@drawable/ic_left_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEdit"
            style="@style/HeadingTextSemiBold"
            android:layout_marginTop="@dimen/margin_60dp"
            android:text="@string/edit_collection"
            android:textColor="@color/dark_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEditCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_26dp"
            android:src="@drawable/favorite_img_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEdit" />

        <TextView
            android:id="@+id/tvEditDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_51dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/the_cover_is_the_latest_post_in_the_list"
            android:textAlignment="center"
            android:textColor="@color/dark_black_50_percent"
            android:textSize="@dimen/margin_14sp"
            app:layout_constraintTop_toBottomOf="@id/ivEditCollection" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiAccess"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_36dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/TextInputEditText"
                android:background="@drawable/bg_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDeleteCollection"
            style="@style/EditText"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:text="@string/delete_collection"
            android:textColor="@color/red"
            android:onClick="@{clickListener::deleteCollection}"
            app:layout_constraintBottom_toTopOf="@id/btnSaveChanges"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveChanges"
            style="@style/Button"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_42dp"
            android:background="@drawable/bg_continue_unselected"
            android:text="@string/save_changes"
            android:onClick="@{clickListener::saveChanges}"
            android:backgroundTint="@{isValid ? @color/dark_black : @color/lighter_grey}"
            android:textColor="@{isValid ? @color/white :@color/dark_black_50_percent}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>