<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="FragmentSettingContactFormBinding">

        <variable
            name="title"
            type="String" />

        <variable
            name="isValid"
            type="Boolean" />

        <variable
            name="clickListener"
            type="com.applaunch.bgm.views.fragment.setting.SettingContactFormFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".old.ui.setting.SettingContactFragment">

        <include
            android:id="@+id/commonLayout"
            bind:title="@{title}"
            layout="@layout/common_layout_heading" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            style="@style/TextInputLayout"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:hint="@string/email_address_optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commonLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/TextInputEditText"
                android:background="@drawable/bg_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiSubject"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_16dp"
            android:hint="@string/subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSubject"
                style="@style/TextInputEditText"
                android:background="@drawable/bg_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:hint="@string/message"
            android:gravity="start"
            android:padding="@dimen/margin_16dp"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/tiSubject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            style="@style/Button"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_42dp"
            android:background="@drawable/bg_continue_unselected"
            android:backgroundTint="@{isValid ? @color/dark_black : @color/lighter_grey}"
            android:clickable="@{isValid ? true:false}"
            android:onClick="@{clickListener::onSendClick}"
            android:textColor="@{isValid ? @color/white :@color/dark_black_50_percent}"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>