<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.VideoDescriptionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/margin_375dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/bg_video_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvVideoHeading"
                style="@style/HeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_100dp"
                android:text="@string/rehazentrum_straubing_dr_hierl"
                android:textAlignment="textStart"
                android:textSize="@dimen/margin_22sp"
                app:layout_constraintEnd_toStartOf="@+id/ivVideoDescriptionDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivVideoDescriptionDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:background="@drawable/ic_base_cross"
                android:padding="@dimen/margin_8dp"
                android:src="@drawable/ic_cross"
                app:layout_constraintBottom_toBottomOf="@id/tvVideoHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvVideoHeading" />

            <TextView
                android:id="@+id/tvDescriptionType"
                style="@style/TypeText"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/webinar"
                android:textColor="@color/drax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVideoHeading" />

            <ImageView
                android:id="@+id/ivDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:src="@drawable/ic_colored_oval"
                app:layout_constraintBottom_toBottomOf="@id/tvDescriptionType"
                app:layout_constraintStart_toEndOf="@id/tvDescriptionType"
                app:layout_constraintTop_toTopOf="@id/tvDescriptionType" />

            <TextView
                android:id="@+id/tvDescriptionCategory"
                style="@style/TypeText"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/total_viewers"
                android:textColor="@color/drax"
                app:layout_constraintBottom_toBottomOf="@id/ivDivider"
                app:layout_constraintStart_toEndOf="@+id/ivDivider"
                app:layout_constraintTop_toTopOf="@id/ivDivider" />

            <TextView
                android:id="@+id/tvVideoDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_25dp"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="@dimen/margin_2dp"
                android:text="@string/video_description"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/margin_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionType" />

            <TextView
                android:id="@+id/tvDescriptionSpeaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/speakers"
                android:textColor="@color/drax"
                android:textSize="@dimen/margin_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVideoDesc" />

            <TextView
                android:id="@+id/tvIvanJson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:fontFamily="@font/inter_bold"
                android:lineSpacingExtra="@dimen/margin_5dp"
                android:text="@string/ivan_johnson_bruce_wayne_lark_kent"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/margin_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionSpeaker" />

            <View
                android:id="@+id/vVideo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:background="@color/dark_black_10_percent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIvanJson" />

            <TextView
                android:id="@+id/tvVideoLike"
                style="@style/Likes"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vVideo" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVideoSaveToFavorite"
                style="@style/Button"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginVertical="@dimen/margin_42dp"
                android:background="@drawable/bg_save_to_favorite"
                android:text="@string/save_to_favorites"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVideoLike" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

